All main menu options implementation

--- a/frontend/src/app/dashboard/dashboard/dashboard.page.html
+++ b/frontend/src/app/dashboard/dashboard/dashboard.page.html
@@ -60,7 +60,7 @@
         </ion-col>
         <ion-col>
           <div>
-            <ion-chip color="secondary" (click)="gotoService('data-bundle')">
+            <ion-chip color="secondary" (click)="gotoService('share-data')">
               <ion-icon name="archive" color="primary"></ion-icon>
           </ion-chip><br>
           <ion-label color="dark" style="padding-left:0px;">Share Data</ion-label>
@@ -116,6 +116,17 @@
               <ion-icon name="archive" color="primary"></ion-icon>
           </ion-chip><br>
           <ion-label color="dark" style="margin-left:-1px;">SIM Hosting</ion-label>
+          </div>
+        </ion-col>
+      </ion-row>
+
+      <ion-row class="chip">
+        <ion-col>
+          <div>
+            <ion-chip color="secondary" (click)="gotoService('recurrent-services')">
+              <ion-icon name="archive" color="primary"></ion-icon>
+          </ion-chip><br>
+          <ion-label color="dark" style="margin-left:-1px;">Recurrent<br/>Services</ion-label>
           </div>
         </ion-col>
       </ion-row>
